--- a/.gitignore
+++ b/.gitignore
@@ -4,22 +4,18 @@ Config.mak
 *.o
 .*.d
 mkroot
+fsckroot
 httpd
 httprape
-deadconn
-deadconn.c
-MANIFEST
-ROOT
-mkpkg
-pkg/
-pkg.tar.gz
+perf.data
+perf.data.old
 manifest.pkg
 webroot.objdb
 *.dot
 *.ps
 analysis
-http_load-12mar2006
-load-url-file
 rapewalk
 markov.c
 WALK
+deadconn
+deadconn.c
